--- a/lambda/coupons_to_secure/package.json
+++ b/lambda/coupons_to_secure/package.json
@@ -12,11 +12,11 @@
     "node": ">=10"
   },
   "devDependencies": {
+    "aws-sdk-mock": "^5.1.0",
     "eslint": "^7.6.0",
     "eslint-config-google": "^0.14.0",
     "eslint-plugin-import": "^2.22.0",
     "eslint-plugin-jest": "^24.1.3",
-    "aws-sdk-mock": "^5.1.0",
     "jest": "^26.6.3"
   },
   "jest": {
@@ -28,5 +28,8 @@
     "bvc"
   ],
   "author": "BVC",
-  "license": "ISC"
+  "license": "ISC",
+  "dependencies": {
+    "jsonwebtoken": "^9.0.2"
+  }
 }
